@@ -42,39 +42,38 @@ then
 	esac
 fi
 
-# perform any rcadd then any rcdel
+# Perform any rcadd then any rcdel
 if [ -n "${clst_rcadd}" ] || [ -n "${clst_rcdel}" ]
 then
 	if [ -n "${clst_rcadd}" ]
 	then
-	for x in ${clst_rcadd}
-	do
-		echo "Adding ${x%%|*} to ${x##*|}"
-		if [ ! -d /etc/runlevels/${x%%|*} ]
-		then
-		echo "Runlevel ${x##*|} doesn't exist .... creating it"
-		mkdir -p "/etc/runlevels/${x##*|}"
-		fi
-		rc-update add "${x%%|*}" "${x##*|}"
-	done
+		for x in ${clst_rcadd}
+		do
+			echo "Adding ${x%%|*} to ${x##*|}"
+			if [ ! -d /etc/runlevels/${x%%|*} ]
+			then
+				echo "Runlevel ${x##*|} doesn't exist .... creating it"
+				mkdir -p "/etc/runlevels/${x##*|}"
+			fi
+			rc-update add "${x%%|*}" "${x##*|}"
+		done
 	fi
 
 	if [ -n "${clst_rcdel}" ]
 	then
-	for x in ${clst_rcdel}
-	do
-		rc-update del "${x%%|*}" "${x##*|}"
-	done
-	for x in $(ls /etc/runlevels)
-	do
-		CONTENTS=$(find /etc/runlevels/${x} -type f)
-		if [ -z "${CONTENTS}" ]
-		then
-			echo "${x}: Empty runlevel found.... deleting"
-		rmdir "/etc/runlevels/${x}"
-		fi
-	done
-			
+		for x in ${clst_rcdel}
+		do
+			rc-update del "${x%%|*}" "${x##*|}"
+		done
+		for x in $(ls /etc/runlevels)
+		do
+			CONTENTS=$(find /etc/runlevels/${x} -type f)
+			if [ -z "${CONTENTS}" ]
+			then
+				echo "${x}: Empty runlevel found.... deleting"
+				rmdir "/etc/runlevels/${x}"
+			fi
+		done
 	fi
 fi
 
